[package]
name = "datalogger"
version = "0.1.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.61.0"
description = "Humidity & Temperature datalogger for DHT22 sensor on Raspberry Pi."
readme = "README.md"
repository = "https://github.com/marcoradocchia/datalogger/"
license = "GPL-3.0-only"
keywords = ["temperature", "humidity", "datalogger", "dht22", "raspberry-pi"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht22_pi = { version = "0.3.0" }
clap = { version = "3.2.8", features = ["derive"] }
chrono = { version = "0.4.19" }
